Fixed Box Outline Radius Overlap

--- a/SCSS/_media.scss
+++ b/SCSS/_media.scss
@@ -56,7 +56,6 @@
                     width: 250px;
                     margin: 0 20px;
                     --key_size: 60px;
-                    // top: 280px;
                     right: 100px;
                     top: 50px;
                     transform: rotateZ(-30deg);
@@ -126,41 +125,8 @@
                             }
                         }
                         .skill_text {
-                            display: flex;
-                            flex-direction: row;
-                            position: relative;
                             width: 100%;
                             margin-top: 20px;
-                            --border_offset: 50px;
-    
-                            p {
-                                display: block;
-                                z-index: 5;
-                                margin: 10px;
-                                padding: 30px;
-                                background-color: black;
-                                border-top-right-radius: var(--border_offset);
-                                border-bottom-left-radius: var(--border_offset);
-                            }
-    
-                            div {
-                                position: absolute;
-                                display: block;
-                            }
-                            .top_left_border {
-                                background-color: $neon_blue;
-                                top: 0;
-                                left: 0;
-                                right: var(--border_offset);
-                                bottom: var(--border_offset);
-                            }
-                            .bottom_right_border {
-                                background-color: $neon_pink;
-                                top: var(--border_offset);
-                                left: var(--border_offset);
-                                right: 0;
-                                bottom: 0;
-                            }
                         }
                     }
                     .reverse {
@@ -178,6 +144,7 @@
                 margin: 0 auto;
     
                 .projects_item_container {
+
                     .typing_effect_project {
                         .project_visual {
                             display: flex;
@@ -238,9 +205,7 @@
     
                         .project_visual {
                             .image_container {
-                                // width: 100%;
                                 height: 50vh;
-                                // margin: 0 50px;
                                 #mobile_view {
                                     display: none;
                                 }
@@ -272,7 +237,7 @@
                         }
 
                         .hobbie_icon {
-                            border-top-right-radius: var(--border_offset);
+                            border-top-right-radius: $content_box_radius;
                             width: 100%;  
                             height: 300px;
                             order: -1;
@@ -353,14 +318,12 @@
                     animation: disablePrinter 3s forwards;
 
                     .printing_bar {
-                        // display: none;
                         z-index: 40;
                         position: absolute;
                         height: 10px;
                         left: 0;
                         right: 0;
                         bottom: -5px;
-                        // background-color: $neon_blue;
                         background-color: black;
                     }
                     .printing_circle {
@@ -380,19 +343,15 @@
                     width: 700px;
                     overflow: hidden;
                     display: block;
-                    // opacity: 1;
     
                     .skye_pixel_group {
                         position: relative;
-                        // border: solid 1px red;
                         height: 800px;
                         img {
                             position: absolute;
                             top: 0;
-                            // left: 0;
                             max-height: 800px;
                             width: 700px;
-                            // z-index: 100;
                             opacity: 0;
                         }
                         display: block;
@@ -413,24 +372,15 @@
                             animation: 6s SkyeRedAnimation linear infinite;
                         }
                         .skye_blue {
-                            // opacity: 0.5;
                             z-index: 99;
                             animation: 5s SkyeBlueAnimation linear infinite;
 
                         }
                         .skye_magenta {
-                            // opacity: 0.5;
                             animation: 3s SkyeMagentaAnimation linear infinite;
                         }
                         .skye_light_tones {
-                            // opacity: 0.8;
                             animation: 20s SkyeLightAnimation linear infinite;
-                        }
-                        .skye_midtones {
-                            // opacity: 0.5;
-                        }
-                        .skye_shadows {
-                            // opacity: 0.5;
                         }
                     } 
                 }
@@ -489,12 +439,6 @@
                             width: 70%;
                         }
                     }
-
-                    // .reverse {
-                    //     .skill_icon {
-                    //         // order: +1;
-                    //     }
-                    // }
                 }
             }
         }
@@ -578,10 +522,8 @@
 
 @media (min-width: 1218px) {
     header {
-        // height: 80vh;
         height: 100%;
         width: 1200px;
-        // overflow: unset;
         position: relative;
         .title_image_container {
             .website_title {
@@ -590,7 +532,6 @@
         }
 
         .underlines {
-            // border: solid 1px white;
             margin-top: 50px;
 
             .line_three {
@@ -603,9 +544,7 @@
             right: 0px;
             width: 500px;
             top: 425px;
-            // margin-left: 0;
         }
-        // border: solid 1px white;
     }
 
     main {
